--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,13 @@ categories = ["cryptography", "algorithms"]
 keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]
 
 [dependencies]
+redis = "0.27.6"
 rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 curv-kzen = { version = "0.10.0", default-features = false }
 serde_json = "1.0"
 once_cell = "1.20.2"
+bincode = "1.3.3"
 
 [dev-dependencies]
 bencher = "0.1"
@@ -45,20 +47,20 @@ default = ["curv-kzen/rust-gmp-kzen"]
 #name = "keygen_optimized"
 #harness = false
 #path = "benches/optimized_paillier/keygen.rs"
+#
 
-
-#[[bench]]
-#name = "encryption_optimized"
-#harness = false
-#path = "benches/optimized_paillier/encryption.rs"
+[[bench]]
+name = "encryption_optimized"
+harness = false
+path = "benches/optimized_paillier/encryption.rs"
 
 
 [[bench]]
 name = "encryption_precomputed"
 harness = false
 path = "benches/optimized_paillier/encryption_precompute.rs"
-
-
+#
+#
 #[[bench]]
 #name = "encryption"
 #harness = false
@@ -123,6 +125,19 @@ path = "examples/optimized_paillier/core.rs"
 [[example]]
 name = "optimized-test"
 path = "examples/optimized_paillier/test.rs"
+
+
+ [[example]]
+ name = "test-redis"
+ path = "examples/optimized_paillier/test_produce_redis.rs"
+
+[[example]]
+name = "server-redis"
+path = "examples/optimized_paillier/server.rs"
+
+[[example]]
+name = "client-redis"
+path = "examples/optimized_paillier/client.rs"
 
 # [[example]]
 # name = "optimized-packed"
