--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,19 @@ categories = ["cryptography", "algorithms"]
 keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]
 
 [dependencies]
-redis = "0.27.6"
+redis = "0.20.2"
 rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
-curv-kzen = { version = "0.10.0", default-features = false }
+curv-kzen = {git = "https://github.com/nxhieu3102/curv-kzen", default-features = false }
 serde_json = "1.0"
 once_cell = "1.20.2"
 bincode = "1.3.3"
+getrandom = { version = "0.2", features = ["js"] }
+rust-gmp={git="https://github.com/nxhieu3102/rust-gmp"}
+wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dev-dependencies]
 bencher = "0.1"
@@ -23,7 +29,7 @@ serde_json = "1.0"
 rand = "0.6"
 
 [features]
-default = ["curv-kzen/rust-gmp-kzen"]
+default = ["curv-kzen/rust-gmp"]
 
 ######### Paillier 
 
@@ -89,6 +95,8 @@ name = "simple-voting"
 path = "examples/paillier/simple-voting.rs"
 
 
+[profile.release]
+strip = true
 
 # ######### Optimized Paillier 
 
