--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,26 +12,44 @@ keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoag
 redis = "0.20.2"
 rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
-curv-kzen = {git = "https://github.com/nxhieu3102/curv-kzen", default-features = false }
+curv-kzen = { git = "https://github.com/nxhieu3102/curv-kzen"}
 serde_json = "1.0"
 once_cell = "1.20.2"
 bincode = "1.3.3"
-getrandom = { version = "0.2", features = ["js"] }
-rust-gmp={git="https://github.com/nxhieu3102/rust-gmp"}
+getrandom = { version = "0.2.15", features = ["js", "js-sys"] }
+rand = { version = "0.8.5", features = ["std"] }
+rand_core = { version = "0.6.4", default-features = false, features = ["std"] }
+rust-gmp = { git = "https://github.com/nxhieu3102/rust-gmp" }
 wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
+serde-wasm-bindgen = "0.4"
+console_error_panic_hook = "0.1"
+instant = "0.1.2"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
+#[replace]
+#"getrandom:0.1.16" = { git = "https://github.com/rust-lang/crates.io-index#getrandom@0.2.15", features = ["js", "js-sys"] }
 
 [dev-dependencies]
 bencher = "0.1"
 serde_json = "1.0"
-rand = "0.6"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [features]
 default = ["curv-kzen/rust-gmp"]
+#
+#[dependencies.web-sys]
+#features = [
+# 'console',
+# 'Document',
+# 'HtmlElement',
+# 'HtmlInputElement',
+# 'MessageEvent',
+# 'Window',
+# 'Worker',
+#]
 
-######### Paillier 
+######### Paillier
 
 # benchmark
 #[[bench]]
