--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,40 +9,91 @@ categories = ["cryptography", "algorithms"]
 keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]
 
 [dependencies]
+redis = "0.20.2"
 rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
-curv-kzen = { version = "0.10.0", default-features = false }
+curv-kzen = { git = "https://github.com/nxhieu3102/curv-kzen"}
+serde_json = "1.0"
+once_cell = "1.20.2"
+bincode = "1.3.3"
+getrandom = { version = "0.2.15", features = ["js", "js-sys"] }
+rand = { version = "0.8.5", features = ["std"] }
+rand_core = { version = "0.6.4", default-features = false, features = ["std"] }
+rust-gmp = { git = "https://github.com/nxhieu3102/rust-gmp" }
+wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
+serde-wasm-bindgen = "0.4"
+console_error_panic_hook = "0.1"
+instant = "0.1.2"
+
+#[replace]
+#"getrandom:0.1.16" = { git = "https://github.com/rust-lang/crates.io-index#getrandom@0.2.15", features = ["js", "js-sys"] }
 
 [dev-dependencies]
 bencher = "0.1"
 serde_json = "1.0"
-rand = "0.6"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["curv-kzen/rust-gmp-kzen"]
+default = ["curv-kzen/rust-gmp"]
+#
+#[dependencies.web-sys]
+#features = [
+# 'console',
+# 'Document',
+# 'HtmlElement',
+# 'HtmlInputElement',
+# 'MessageEvent',
+# 'Window',
+# 'Worker',
+#]
 
-######### Paillier 
+######### Paillier
 
 # benchmark
-[[bench]]
-name = "arith"
-harness = false
-path = "benches/paillier/arith.rs"
+#[[bench]]
+#name = "arith"
+#harness = false
+#path = "benches/paillier/arith.rs"
+#
+#[[bench]]
+#name = "encryption"
+#harness = false
+#path = "benches/paillier/encryption.rs"
+#
+#[[bench]]
+#name = "keygen"
+#harness = false
+#path = "benches/paillier/keygen.rs"
+#
+#[[bench]]
+#name = "keygen_optimized"
+#harness = false
+#path = "benches/optimized_paillier/keygen.rs"
+#
 
 [[bench]]
-name = "encryption"
+name = "encryption_optimized"
 harness = false
-path = "benches/paillier/encryption.rs"
+path = "benches/optimized_paillier/encryption.rs"
+
 
 [[bench]]
-name = "keygen"
+name = "encryption_precomputed"
 harness = false
-path = "benches/paillier/keygen.rs"
+path = "benches/optimized_paillier/encryption_precompute.rs"
+#
+#
+#[[bench]]
+#name = "encryption"
+#harness = false
+#path = "benches/paillier/encryption.rs"
 
-[[bench]]
-name = "proof"
-harness = false
-path = "benches/paillier/proof.rs"
+#[[bench]]
+#name = "proof"
+#harness = false
+#path = "benches/paillier/proof.rs"
 
 # examples
 [[example]]
@@ -60,6 +111,10 @@ path = "examples/paillier/packed.rs"
 [[example]]
 name = "simple-voting"
 path = "examples/paillier/simple-voting.rs"
+
+
+[profile.release]
+strip = true
 
 # ######### Optimized Paillier 
 
@@ -92,6 +147,23 @@ path = "examples/optimized_paillier/basic.rs"
 [[example]]
 name = "optimized-core"
 path = "examples/optimized_paillier/core.rs"
+
+[[example]]
+name = "optimized-test"
+path = "examples/optimized_paillier/test.rs"
+
+
+ [[example]]
+ name = "test-redis"
+ path = "examples/optimized_paillier/test_produce_redis.rs"
+
+[[example]]
+name = "server-redis"
+path = "examples/optimized_paillier/server.rs"
+
+[[example]]
+name = "client-redis"
+path = "examples/optimized_paillier/client.rs"
 
 # [[example]]
 # name = "optimized-packed"
