--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.4.3"
 edition = "2018"
 description = "Efficient pure-Rust library for the Paillier partially homomorphic encryption scheme"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/ZenGo-X/rust-paillier"
+repository = "https://github.com/nxhieu3102/rust-paillier"
 categories = ["cryptography", "algorithms"]
 keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]
+
 
 [dependencies]
 redis = "0.20.2"
@@ -24,6 +25,8 @@ wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
 serde-wasm-bindgen = "0.4"
 console_error_panic_hook = "0.1"
 instant = "0.1.2"
+rug = "1.27.0"
+thiserror = "1.0.69"
 
 #[replace]
 #"getrandom:0.1.16" = { git = "https://github.com/rust-lang/crates.io-index#getrandom@0.2.15", features = ["js", "js-sys"] }
